--- a/app/src/main/res/layout/activity_newcalc.xml
+++ b/app/src/main/res/layout/activity_newcalc.xml
@@ -305,7 +305,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="450dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/borderradius"
                 android:backgroundTint="@color/white"
@@ -405,8 +405,8 @@
                     android:id="@+id/calcEnteral_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="44dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -513,8 +513,8 @@
                     android:id="@+id/calcPFCC_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="48dp"
+                    android:layout_marginEnd="124dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="14sp"
@@ -647,8 +647,8 @@
                     android:id="@+id/Sodium_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -760,8 +760,8 @@
                     android:id="@+id/Pottasium_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="100dp"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -873,8 +873,8 @@
                     android:id="@+id/Calcium_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="100dp"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -987,7 +987,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:layout_marginEnd="100dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -1120,8 +1120,8 @@
                     android:id="@+id/Glukoza_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -1288,8 +1288,8 @@
                     android:id="@+id/VFateEmuls_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -1457,8 +1457,8 @@
                     android:id="@+id/calcAmionkislot_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -1642,8 +1642,8 @@
                     android:id="@+id/volumePerGlucose_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -1756,7 +1756,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -1790,7 +1790,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="570dp"
+                android:layout_height="400dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/borderradius"
                 android:backgroundTint="@color/white"
@@ -1855,22 +1855,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/textDefinitionOfVGlukoza3" />
 
 
-                <EditText
-                    android:id="@+id/c1"
-                    android:layout_width="344dp"
-                    android:layout_height="51dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="28dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/for_calc_activity"
-                    android:ems="10"
-                    android:fontFamily="@font/tttravels_bold"
-                    android:hint="с1"
-                    android:inputType="date"
-                    android:paddingLeft="10dp"
-                    android:textSize="14dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/doseOfGlukoza2" />
 
                 <EditText
                     android:id="@+id/v"
@@ -1887,24 +1871,8 @@
                     android:paddingLeft="10dp"
                     android:textSize="14dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/c1" />
+                    app:layout_constraintTop_toBottomOf="@+id/doseOfGlukoza2" />
 
-                <EditText
-                    android:id="@+id/c2"
-                    android:layout_width="344dp"
-                    android:layout_height="51dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="28dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/for_calc_activity"
-                    android:ems="10"
-                    android:fontFamily="@font/tttravels_bold"
-                    android:hint="c2"
-                    android:inputType="date"
-                    android:paddingLeft="10dp"
-                    android:textSize="14dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/v" />
 
 
                 <Button
@@ -1918,14 +1886,14 @@
                     android:onClick="calcDefinitionOfGlukoza"
                     android:text="Вычислить"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/c2" />
+                    app:layout_constraintTop_toBottomOf="@+id/v" />
 
                 <TextView
                     android:id="@+id/definitionOfVGlukoza_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -2038,8 +2006,8 @@
                     android:id="@+id/Volume10Glukoze_result"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="28dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
                     android:text=""
                     android:textSize="34sp"
@@ -2189,9 +2157,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
-                    android:text="textView"
+                    android:text=""
                     android:textSize="34sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/InfusionSpeed_btn" />
@@ -2200,10 +2168,10 @@
                     android:id="@+id/InfusionSpeed_result2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="112dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="192dp"
                     android:fontFamily="@font/tttravels_bold"
-                    android:text="textView"
+                    android:text=""
                     android:textSize="34sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/InfusionSpeed_result" />
